launchpad-buildd (215) UNRELEASED; urgency=medium

  * Fix setup instructions for a development environment.

 -- Jürgen Gmach <juergen.gmach@canonical.com>  Tue, 14 Jun 2022 13:26:01 +0200

launchpad-buildd (214) focal; urgency=medium

  * Pass apt repository and environment variable options to run-ci, not
    run-ci-prepare (LP: #1977477).
  * Tolerate ntphost being unset in postinst.
  * Avoid using the deprecated apt-key (LP: #1938704).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 07 Jun 2022 22:13:42 +0100

launchpad-buildd (213) focal; urgency=medium

  [ Colin Watson ]
  * Dynamically generate configuration file in lpbuildd.tests.harness.
  * Remove unnecessary "slave" component from some file names.

  [ Jürgen Gmach ]
  * Pass environment variable and apt repository data to the CI runner.

 -- Jürgen Gmach <juergen.gmach@canonical.com>  Thu, 19 May 2022 13:15:53 +0200

launchpad-buildd (212) focal; urgency=medium

  * Ensure that launchpad-buildd runs with lxd as a supplementary group.
  * Fix use of shallow clones for OCI builds, which regressed in version 211
    (LP: #1968630).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 12 Apr 2022 17:33:31 +0100

launchpad-buildd (211) focal; urgency=medium

  * Use "git checkout" rather than "git clone -b", since that allows
    checking out by commit ID.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 05 Apr 2022 21:52:14 +0100

launchpad-buildd (210) bionic; urgency=medium

  * Stop building with dpkg-deb -Zgzip; we no longer need to install on
    lucid.
  * Make more loop device nodes available in LXD containers (LP: #1963706).
  * Drop pre-Python-3.6 code using pyupgrade.
  * Fix gathering the output of charm recipe builds that use --build-path.
  * Convert daemon startup to systemd.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 17 Mar 2022 15:41:49 +0000

launchpad-buildd (209) bionic; urgency=medium

  * Upgrade charm to bionic and Python 3.
  * Remove Python 2 support.