@@ -1,6 +1,7 @@
 launchpad-buildd (215) UNRELEASED; urgency=medium
 
   * Fix setup instructions for a development environment.
+  * Add support for plugin settings for CI builds.
 
  -- Jürgen Gmach <juergen.gmach@canonical.com>  Tue, 14 Jun 2022 13:26:01 +0200
 
